--- a/dataframe_test.ipynb
+++ b/dataframe_test.ipynb
@@ -611,13 +611,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Profile</th>\n",
+       "      <th>Message</th>\n",
+       "      <th>Number of Reactions</th>\n",
+       "      <th>Number of Shares</th>\n",
+       "      <th>Number of Comments (primary)</th>\n",
+       "      <th>Unweighted_Engagement_Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12/31/23 9:40 PM</td>\n",
+       "      <td>Wild Adventures Theme Park</td>\n",
+       "      <td>🎟️🚨 Today's the FINAL day to use your 2023 Sea...</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12/31/23 8:01 PM</td>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>See you next year! 😉                Don’t miss...</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12/31/23 7:30 PM</td>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>Don't miss our HUGE firework display ! 🥳\\n\\n#f...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12/31/23 7:00 PM</td>\n",
+       "      <td>Disneyland Paris</td>\n",
+       "      <td>Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉</td>\n",
+       "      <td>646.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>297.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12/31/23 7:00 PM</td>\n",
+       "      <td>Silverwood Theme Park</td>\n",
+       "      <td>It's the last day of our New Year's Sale! Save...</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>11.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Date                     Profile  \\\n",
+       "0  12/31/23 9:40 PM  Wild Adventures Theme Park   \n",
+       "1  12/31/23 8:01 PM            Fun Spot America   \n",
+       "2  12/31/23 7:30 PM            Fun Spot America   \n",
+       "3  12/31/23 7:00 PM            Disneyland Paris   \n",
+       "4  12/31/23 7:00 PM       Silverwood Theme Park   \n",
+       "\n",
+       "                                             Message  Number of Reactions  \\\n",
+       "0  🎟️🚨 Today's the FINAL day to use your 2023 Sea...                 16.0   \n",
+       "1  See you next year! 😉                Don’t miss...                 38.0   \n",
+       "2  Don't miss our HUGE firework display ! 🥳\\n\\n#f...                 23.0   \n",
+       "3     Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉                646.0   \n",
+       "4  It's the last day of our New Year's Sale! Save...                 17.0   \n",
+       "\n",
+       "   Number of Shares  Number of Comments (primary)  Unweighted_Engagement_Score  \n",
+       "0               0.0                           2.0                     8.250000  \n",
+       "1               0.0                           1.0                    18.500000  \n",
+       "2               0.0                           2.0                    12.250000  \n",
+       "3               0.0                          52.0                   297.000000  \n",
+       "4               0.0                           2.0                    11.666667  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Function to calculate the average excluding zeros, unless all values are zero\n",
     "def calculate_unweighted_average(row):\n",
-    "    values = [row['Number of Reactions'], row['Number of Shares'], row['Number of Comments (primary)']]\n",
+    "    values = [row['Number of Reactions'], row['total_shares'], row['Number of Comments (primary)'], row['Number of Likes']]\n",
     "    # Remove zeros but only if not all values are zeros\n",
     "    filtered_values = [value for value in values if value != 0] or values\n",
     "    return np.mean(filtered_values)\n",
