--- a/dataframe_test.ipynb
+++ b/dataframe_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "4  https://www.facebook.com/562559642740100/posts...  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -303,16 +303,14 @@
        "      <th>Comments per post</th>\n",
        "      <th>Comments on posts by fans</th>\n",
        "      <th>Post interaction rate</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Engagement</th>\n",
+       "      <th>Number of Likes</th>\n",
+       "      <th>Link-posts</th>\n",
+       "      <th>Picture Posts</th>\n",
+       "      <th>Video-posts</th>\n",
        "      <th>Profile-ID</th>\n",
        "      <th>Post-ID</th>\n",
        "      <th>Link</th>\n",
-       "      <th>Total Shares</th>\n",
-       "      <th>Total Score</th>\n",
-       "      <th>text_length</th>\n",
-       "      <th>hashtag_count</th>\n",
-       "      <th>readability_score</th>\n",
-       "      <th>total_shares</th>\n",
        "      <th>total_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -329,16 +327,14 @@
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1,09E+12</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>84679583132</td>\n",
        "      <td>84679583132_770120045161180</td>\n",
        "      <td>https://www.facebook.com/617429960430190/posts...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>337</td>\n",
-       "      <td>57</td>\n",
-       "      <td>74.69</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>37.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -353,16 +349,14 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>4,17E+11</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1,8402E+11</td>\n",
        "      <td>184020466977_767286052104076</td>\n",
        "      <td>https://www.facebook.com/653224623510220/posts...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>141</td>\n",
-       "      <td>19</td>\n",
-       "      <td>87.72</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>76.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -377,16 +371,14 @@
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>2,85E+11</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1,8402E+11</td>\n",
        "      <td>184020466977_767267948772553</td>\n",
        "      <td>https://www.facebook.com/653224623510220/posts...</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>128</td>\n",
-       "      <td>16</td>\n",
-       "      <td>38.99</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>53.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -401,16 +393,14 @@
        "      <td>56.0</td>\n",
        "      <td>56.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1,36E+11</td>\n",
+       "      <td>478.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>6,52389E+14</td>\n",
        "      <td>652389081615295_775974521237956</td>\n",
        "      <td>https://www.facebook.com/724434559725286/posts...</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1300.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>8</td>\n",
-       "      <td>48.47</td>\n",
-       "      <td>12.0</td>\n",
        "      <td>1300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -425,21 +415,18 @@
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>4,96E+11</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>7,62702E+14</td>\n",
        "      <td>762701550509617_678920137770716</td>\n",
        "      <td>https://www.facebook.com/562559642740100/posts...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>227</td>\n",
-       "      <td>40</td>\n",
-       "      <td>83.36</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>39.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -464,12 +451,19 @@
        "3               0.0                          52.0                12.0   \n",
        "4               0.0                           2.0                 0.0   \n",
        "\n",
-       "   Comments per post  Comments on posts by fans  Post interaction rate  ...  \\\n",
-       "0                2.0                        2.0                    0.0  ...   \n",
-       "1                1.0                        1.0                    0.0  ...   \n",
-       "2                2.0                        2.0                    0.0  ...   \n",
-       "3               56.0                       56.0                    0.0  ...   \n",
-       "4                2.0                        2.0                    0.0  ...   \n",
+       "   Comments per post  Comments on posts by fans  Post interaction rate  \\\n",
+       "0                2.0                        2.0                    0.0   \n",
+       "1                1.0                        1.0                    0.0   \n",
+       "2                2.0                        2.0                    0.0   \n",
+       "3               56.0                       56.0                    0.0   \n",
+       "4                2.0                        2.0                    0.0   \n",
+       "\n",
+       "  Engagement  Number of Likes  Link-posts  Picture Posts  Video-posts  \\\n",
+       "0   1,09E+12             13.0         0.0            1.0          0.0   \n",
+       "1   4,17E+11             33.0         0.0            0.0          0.0   \n",
+       "2   2,85E+11             21.0         0.0            0.0          1.0   \n",
+       "3   1,36E+11            478.0         0.0            1.0          0.0   \n",
+       "4   4,96E+11             16.0         0.0            0.0          1.0   \n",
        "\n",
        "    Profile-ID                          Post-ID  \\\n",
        "0  84679583132      84679583132_770120045161180   \n",
@@ -478,31 +472,15 @@
        "3  6,52389E+14  652389081615295_775974521237956   \n",
        "4  7,62702E+14  762701550509617_678920137770716   \n",
        "\n",
-       "                                                Link  Total Shares  \\\n",
-       "0  https://www.facebook.com/617429960430190/posts...           2.0   \n",
-       "1  https://www.facebook.com/653224623510220/posts...           2.0   \n",
-       "2  https://www.facebook.com/653224623510220/posts...           3.0   \n",
-       "3  https://www.facebook.com/724434559725286/posts...          12.0   \n",
-       "4  https://www.facebook.com/562559642740100/posts...           0.0   \n",
-       "\n",
-       "   Total Score text_length hashtag_count readability_score  total_shares  \\\n",
-       "0         37.0         337            57             74.69           2.0   \n",
-       "1         76.0         141            19             87.72           2.0   \n",
-       "2         53.0         128            16             38.99           3.0   \n",
-       "3       1300.0          45             8             48.47          12.0   \n",
-       "4         39.0         227            40             83.36           0.0   \n",
-       "\n",
-       "   total_score  \n",
-       "0         37.0  \n",
-       "1         76.0  \n",
-       "2         53.0  \n",
-       "3       1300.0  \n",
-       "4         39.0  \n",
-       "\n",
-       "[5 rows x 25 columns]"
+       "                                                Link  total_score  \n",
+       "0  https://www.facebook.com/617429960430190/posts...         37.0  \n",
+       "1  https://www.facebook.com/653224623510220/posts...         76.0  \n",
+       "2  https://www.facebook.com/653224623510220/posts...         53.0  \n",
+       "3  https://www.facebook.com/724434559725286/posts...       1300.0  \n",
+       "4  https://www.facebook.com/562559642740100/posts...         39.0  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +683,7 @@
        "9             51              68.77   120.000000  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,6 +709,111 @@
     "\n",
     "# Print the first few rows of the DataFrame\n",
     "merged_df[['Profile', 'Message', 'text_length', 'hashtag_count', 'readability_score', 'total_score']].head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Profile</th>\n",
+       "      <th>Message</th>\n",
+       "      <th>emoji_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wild Adventures Theme Park</td>\n",
+       "      <td>🎟️🚨 Today's the FINAL day to use your 2023 Sea...</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>See you next year! 😉                Don’t miss...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>Don't miss our HUGE firework display ! 🥳\\n\\n#f...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Disneyland Paris</td>\n",
+       "      <td>Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Silverwood Theme Park</td>\n",
+       "      <td>It's the last day of our New Year's Sale! Save...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Profile  \\\n",
+       "0  Wild Adventures Theme Park   \n",
+       "1            Fun Spot America   \n",
+       "2            Fun Spot America   \n",
+       "3            Disneyland Paris   \n",
+       "4       Silverwood Theme Park   \n",
+       "\n",
+       "                                             Message  emoji_count  \n",
+       "0  🎟️🚨 Today's the FINAL day to use your 2023 Sea...            7  \n",
+       "1  See you next year! 😉                Don’t miss...            3  \n",
+       "2  Don't miss our HUGE firework display ! 🥳\\n\\n#f...            1  \n",
+       "3     Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉            3  \n",
+       "4  It's the last day of our New Year's Sale! Save...            0  "
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import emoji\n",
+    "import re\n",
+    "\n",
+    "# Function to count the number of emojis in each post\n",
+    "def count_emojis(text):\n",
+    "    # Using the emoji library to count all emoji characters in the text\n",
+    "    return emoji.emoji_count(text)\n",
+    "# Ensure 'Message' column is a string\n",
+    "merged_df['Message'] = merged_df['Message'].astype(str)\n",
+    "\n",
+    "# Apply the function to count emojis\n",
+    "merged_df['emoji_count'] = merged_df['Message'].apply(count_emojis)\n",
+    "\n",
+    "# Print the dataframe with the new 'emoji_count' column\n",
+    "merged_df[['Profile', 'Message', 'emoji_count']].head()"
    ]
   },
   {
