--- a/test_features.ipynb
+++ b/test_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,15 +228,15 @@
        "4  https://www.facebook.com/562559642740100/posts...  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define the base path to your CSV files\n",
-    "base_path = '/Users/sandervanduin/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9'\n",
-    "#base_path = '/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9'\n",
+    "#base_path = '/Users/sandervanduin/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9'\n",
+    "base_path = '/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9'\n",
     "\n",
     "# Explicitly load each CSV file into its own DataFrame\n",
     "df1 = pd.read_csv(os.path.join(base_path, 'Themeparcs I.csv'), on_bad_lines='skip', delimiter=';')\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "4  https://www.facebook.com/562559642740100/posts...         39.0  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "9             51              68.77   120.000000  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "4  It's the last day of our New Year's Sale! Save...            0  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,10 +818,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "time data \"12/12/2023 23:23\" doesn't match format \"%m/%d/%y %I:%M %p\", at position 787. You might want to try:\n    - passing `format` if your strings have a consistent format;\n    - passing `format='ISO8601'` if your strings are all ISO8601 but not necessarily in exactly the same format;\n    - passing `format='mixed'`, and the format will be inferred for each element individually. You might want to use `dayfirst` alongside this.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9/test_features.ipynb Cell 8\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Converting the 'Date' column to datetime\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mto_datetime(merged_df[\u001b[39m'\u001b[39;49m\u001b[39mDate\u001b[39;49m\u001b[39m'\u001b[39;49m], \u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mm/\u001b[39;49m\u001b[39m%d\u001b[39;49;00m\u001b[39m/\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39my \u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mI:\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mM \u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mp\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Extracting the day of the week\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mDay of Week\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mdt\u001b[39m.\u001b[39mstrftime(\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mA\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:1112\u001b[0m, in \u001b[0;36mto_datetime\u001b[0;34m(arg, errors, dayfirst, yearfirst, utc, format, exact, unit, infer_datetime_format, origin, cache)\u001b[0m\n\u001b[1;32m   1110\u001b[0m         result \u001b[39m=\u001b[39m arg\u001b[39m.\u001b[39mmap(cache_array)\n\u001b[1;32m   1111\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1112\u001b[0m         values \u001b[39m=\u001b[39m convert_listlike(arg\u001b[39m.\u001b[39;49m_values, \u001b[39mformat\u001b[39;49m)\n\u001b[1;32m   1113\u001b[0m         result \u001b[39m=\u001b[39m arg\u001b[39m.\u001b[39m_constructor(values, index\u001b[39m=\u001b[39marg\u001b[39m.\u001b[39mindex, name\u001b[39m=\u001b[39marg\u001b[39m.\u001b[39mname)\n\u001b[1;32m   1114\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(arg, (ABCDataFrame, abc\u001b[39m.\u001b[39mMutableMapping)):\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:488\u001b[0m, in \u001b[0;36m_convert_listlike_datetimes\u001b[0;34m(arg, format, name, utc, unit, errors, dayfirst, yearfirst, exact)\u001b[0m\n\u001b[1;32m    486\u001b[0m \u001b[39m# `format` could be inferred, or user didn't ask for mixed-format parsing.\u001b[39;00m\n\u001b[1;32m    487\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mformat\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mformat\u001b[39m \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mmixed\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 488\u001b[0m     \u001b[39mreturn\u001b[39;00m _array_strptime_with_fallback(arg, name, utc, \u001b[39mformat\u001b[39;49m, exact, errors)\n\u001b[1;32m    490\u001b[0m result, tz_parsed \u001b[39m=\u001b[39m objects_to_datetime64ns(\n\u001b[1;32m    491\u001b[0m     arg,\n\u001b[1;32m    492\u001b[0m     dayfirst\u001b[39m=\u001b[39mdayfirst,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    496\u001b[0m     allow_object\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    497\u001b[0m )\n\u001b[1;32m    499\u001b[0m \u001b[39mif\u001b[39;00m tz_parsed \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    500\u001b[0m     \u001b[39m# We can take a shortcut since the datetime64 numpy array\u001b[39;00m\n\u001b[1;32m    501\u001b[0m     \u001b[39m# is in UTC\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:519\u001b[0m, in \u001b[0;36m_array_strptime_with_fallback\u001b[0;34m(arg, name, utc, fmt, exact, errors)\u001b[0m\n\u001b[1;32m    508\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_array_strptime_with_fallback\u001b[39m(\n\u001b[1;32m    509\u001b[0m     arg,\n\u001b[1;32m    510\u001b[0m     name,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    514\u001b[0m     errors: \u001b[39mstr\u001b[39m,\n\u001b[1;32m    515\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Index:\n\u001b[1;32m    516\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    517\u001b[0m \u001b[39m    Call array_strptime, with fallback behavior depending on 'errors'.\u001b[39;00m\n\u001b[1;32m    518\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 519\u001b[0m     result, timezones \u001b[39m=\u001b[39m array_strptime(arg, fmt, exact\u001b[39m=\u001b[39;49mexact, errors\u001b[39m=\u001b[39;49merrors, utc\u001b[39m=\u001b[39;49mutc)\n\u001b[1;32m    520\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39many\u001b[39m(tz \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mfor\u001b[39;00m tz \u001b[39min\u001b[39;00m timezones):\n\u001b[1;32m    521\u001b[0m         \u001b[39mreturn\u001b[39;00m _return_parsed_timezone_results(result, timezones, utc, name)\n",
+      "File \u001b[0;32mstrptime.pyx:534\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime.array_strptime\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mstrptime.pyx:355\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime.array_strptime\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: time data \"12/12/2023 23:23\" doesn't match format \"%m/%d/%y %I:%M %p\", at position 787. You might want to try:\n    - passing `format` if your strings have a consistent format;\n    - passing `format='ISO8601'` if your strings are all ISO8601 but not necessarily in exactly the same format;\n    - passing `format='mixed'`, and the format will be inferred for each element individually. You might want to use `dayfirst` alongside this."
+     ]
+    }
+   ],
+   "source": [
+    "# Converting the 'Date' column to datetime\n",
+    "merged_df['Date'] = pd.to_datetime(merged_df['Date'], format='%m/%d/%y %I:%M %p')\n",
+    "# Extracting the day of the week\n",
+    "merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
+    "\n",
+    "merged_df[['Date', 'Day of Week']]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'All dates were parsed successfully, and the day of the week has been extracted.'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dateutil import parser\n",
+    "\n",
+    "# Attempt to parse dates using a more flexible method\n",
+    "# This will handle a variety of formats but may not catch every possible inconsistency\n",
+    "def flexible_date_parser(date_str):\n",
+    "    try:\n",
+    "        return parser.parse(date_str)\n",
+    "    except ValueError:\n",
+    "        return pd.NaT\n",
+    "\n",
+    "# Apply the flexible date parser to the 'Date' column\n",
+    "merged_df['Date'] = merged_df['Date'].apply(flexible_date_parser)\n",
+    "\n",
+    "# Check again for any rows where 'Date' conversion resulted in NaT\n",
+    "nat_rows_after_parsing = merged_df[merged_df['Date'].isna()]\n",
+    "\n",
+    "# Count the number of NaT rows after the flexible parsing attempt\n",
+    "nat_count_after_parsing = nat_rows_after_parsing.shape[0]\n",
+    "\n",
+    "# Proceed with extracting the day of the week for dates that were successfully parsed\n",
+    "if nat_count_after_parsing == 0:\n",
+    "    # All dates were parsed successfully, proceed with extracting the day of the week\n",
+    "    merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
+    "    success_message = \"All dates were parsed successfully, and the day of the week has been extracted.\"\n",
+    "else:\n",
+    "    # Some dates could not be parsed\n",
+    "    success_message = f\"{nat_count_after_parsing} rows still contain unparseable dates after flexible parsing.\"\n",
+    "\n",
+    "success_message\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Day of Week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-12-31 21:40:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-12-31 20:01:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-12-31 19:30:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-12-31 19:00:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-12-31 19:00:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15438</th>\n",
+       "      <td>2023-01-01 02:00:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15439</th>\n",
+       "      <td>2023-01-01 01:20:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15440</th>\n",
+       "      <td>2023-01-01 00:01:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15441</th>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15442</th>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15443 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Date Day of Week\n",
+       "0     2023-12-31 21:40:00      Sunday\n",
+       "1     2023-12-31 20:01:00      Sunday\n",
+       "2     2023-12-31 19:30:00      Sunday\n",
+       "3     2023-12-31 19:00:00      Sunday\n",
+       "4     2023-12-31 19:00:00      Sunday\n",
+       "...                   ...         ...\n",
+       "15438 2023-01-01 02:00:00      Sunday\n",
+       "15439 2023-01-01 01:20:00      Sunday\n",
+       "15440 2023-01-01 00:01:00      Sunday\n",
+       "15441 2023-01-01 00:00:00      Sunday\n",
+       "15442 2023-01-01 00:00:00      Sunday\n",
+       "\n",
+       "[15443 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converting the 'Date' column to datetime\n",
+    "merged_df['Date'] = pd.to_datetime(merged_df['Date'], format='%m/%d/%y %I:%M %p')\n",
+    "# Extracting the day of the week\n",
+    "merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
+    "\n",
+    "merged_df[['Date', 'Day of Week']]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -840,7 +1036,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
