--- a/test_features.ipynb
+++ b/test_features.ipynb
@@ -1015,9 +1015,13 @@
     "# Extracting the day of the week\n",
     "merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
     "\n",
-    "merged_df[['Date', 'Day of Week']]\n",
-    "\n"
+    "merged_df[['Date', 'Day of Week']]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
