--- a/test_features.ipynb
+++ b/test_features.ipynb
@@ -1019,9 +1019,104 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Day of Week</th>\n",
+       "      <th>Part of Day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-12-31 21:40:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Evening</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-12-31 20:01:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Evening</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-12-31 19:30:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Evening</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-12-31 19:00:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Evening</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-12-31 19:00:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Evening</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Date Day of Week Part of Day\n",
+       "0 2023-12-31 21:40:00      Sunday     Evening\n",
+       "1 2023-12-31 20:01:00      Sunday     Evening\n",
+       "2 2023-12-31 19:30:00      Sunday     Evening\n",
+       "3 2023-12-31 19:00:00      Sunday     Evening\n",
+       "4 2023-12-31 19:00:00      Sunday     Evening"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Function to categorize part of the day based on the hour\n",
+    "\n",
+    "def get_part_of_day(hour):\n",
+    "    if 5 <= hour < 12:\n",
+    "        return \"Morning\"\n",
+    "    elif 12 <= hour < 17:\n",
+    "        return \"Afternoon\"\n",
+    "    elif 17 <= hour < 22:\n",
+    "        return \"Evening\"\n",
+    "    else:\n",
+    "        return \"Night\"\n",
+    "\n",
+    "# Apply the function to each row in the DataFrame to create a new column\n",
+    "merged_df['Part of Day'] = merged_df['Date'].dt.hour.apply(get_part_of_day)\n",
+    "\n",
+    "# Display the first few rows of the DataFrame to confirm the new column has been added correctly\n",
+    "merged_df[['Date', 'Day of Week', 'Part of Day']].head()\n"
+   ]
   }
  ],
  "metadata": {
